fix regex, names, alignement

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -267,7 +267,7 @@ input {
   display: block;
   margin-top: 7px;
   margin-bottom: 7px;
-  text-align: right;
+  text-align: left;
   line-height: 1;
   transition: 0.3s;
 }
